--- a/TravelEaseForms/TravelEase.csproj
+++ b/TravelEaseForms/TravelEase.csproj
@@ -52,8 +52,26 @@
     <Compile Include="Forms\AdminSignIn.Designer.cs">
       <DependentUpon>AdminSignIn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SP_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SP_Main.Designer.cs">
+      <DependentUpon>SP_Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SP_Registration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SP_Registration.Designer.cs">
+      <DependentUpon>SP_Registration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\SP_Main.resx">
+      <DependentUpon>SP_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SP_Registration.resx">
+      <DependentUpon>SP_Registration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
