--- a/TravelEaseForms/TravelEaseForms.csproj
+++ b/TravelEaseForms/TravelEaseForms.csproj
@@ -52,10 +52,19 @@
     <Compile Include="Forms\TravellerLogin.Designer.cs">
       <DependentUpon>TravellerLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TravellerRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TravellerRegistration.Designer.cs">
+      <DependentUpon>TravellerRegistration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\TravellerLogin.resx">
       <DependentUpon>TravellerLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TravellerRegistration.resx">
+      <DependentUpon>TravellerRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
