--- a/TravelEaseForms/TravelEase.csproj
+++ b/TravelEaseForms/TravelEase.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Forms\AdminSignIn.Designer.cs">
       <DependentUpon>AdminSignIn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SP_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SP_Login.Designer.cs">
+      <DependentUpon>SP_Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SP_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AdminSignIn.resx">
+      <DependentUpon>AdminSignIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SP_Login.resx">
+      <DependentUpon>SP_Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\SP_Main.resx">
       <DependentUpon>SP_Main.cs</DependentUpon>
     </EmbeddedResource>
