--- a/TravelEaseForms/TravelEase.csproj
+++ b/TravelEaseForms/TravelEase.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,15 +53,19 @@
     <Compile Include="Forms\AdminSignIn.Designer.cs">
       <DependentUpon>AdminSignIn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Report.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Report.Designer.cs">
+      <DependentUpon>Report.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SP_Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\SP_Login.Designer.cs">
       <DependentUpon>SP_Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SP_Main.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Forms\SP_Main.cs" />
     <Compile Include="Forms\SP_Main.Designer.cs">
       <DependentUpon>SP_Main.cs</DependentUpon>
     </Compile>
@@ -74,6 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\AdminSignIn.resx">
       <DependentUpon>AdminSignIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Report.resx">
+      <DependentUpon>Report.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SP_Login.resx">
       <DependentUpon>SP_Login.cs</DependentUpon>
