--- a/TravelEaseForms/TravelEaseForms.csproj
+++ b/TravelEaseForms/TravelEaseForms.csproj
@@ -46,6 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\TourOperatorDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TourOperatorDashboard.Designer.cs">
+      <DependentUpon>TourOperatorDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TourOperatorLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TourOperatorLogin.Designer.cs">
+      <DependentUpon>TourOperatorLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TourOperatorRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TourOperatorRegistration.Designer.cs">
+      <DependentUpon>TourOperatorRegistration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TravelerDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TravelerDashboard.Designer.cs">
+      <DependentUpon>TravelerDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\TravellerLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,8 +82,22 @@
     <Compile Include="Forms\TravellerRegistration.Designer.cs">
       <DependentUpon>TravellerRegistration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TripInfoClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Forms\SessionDetails.cs" />
+    <EmbeddedResource Include="Forms\TourOperatorDashboard.resx">
+      <DependentUpon>TourOperatorDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TourOperatorLogin.resx">
+      <DependentUpon>TourOperatorLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TourOperatorRegistration.resx">
+      <DependentUpon>TourOperatorRegistration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TravelerDashboard.resx">
+      <DependentUpon>TravelerDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\TravellerLogin.resx">
       <DependentUpon>TravellerLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +112,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -87,6 +126,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pfp.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Qr code.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
